--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,9 @@ p {
   margin-bottom: 1rem;
 }
 
+.mark-pen
+ background-image: linear-gradient(transparent 50%, rgba(173, 234, 234, 0.5) 50%)
+
 abbr[title],
 abbr[data-original-title] {
   text-decoration: underline;
