--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,7 @@ pre {
 
 .hljs {
     display: block;
-    overflow: visible;
+    overflow-x: auto;
     padding: .5em;
     color: #333;
     background: #f8f8f8;
