--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ mark.blue {
 }
 
 mark.gray {
-	background: linear-gradient(transparent 40%,rgba(163,163,163,1) 40%, #A3A3A3 90%,transparent 50%);	
+	background: linear-gradient(transparent 40%,rgba(10,10,10,1) 40%, #0A0A0A 90%,transparent 95%);	
     padding: 2px 1px;
 }
 
